<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.5"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2">
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mensLeagueBtn" android:textOff="@string/mens"
                android:textOn="@string/mens" android:text="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOn="@string/womens" android:textOff="@string/womens"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:onClick="onWomensClicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="229dp"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/coedLeagueBtn" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>