<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">

    <ImageView
            android:src="@drawable/welcomescreenbg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/background_image"/>
    <ImageView
            android:src="@drawable/swooshlogo"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="40sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
    />
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="191dp"
            android:layout_height="36dp"
            android:id="@+id/textView3" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="19sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.502"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <TextView
            android:text="@string/find_a_team"
            android:layout_width="184dp"
            android:layout_height="39dp"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="12sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button"/>

</android.support.constraint.ConstraintLayout>